--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,3 +1,4 @@
+<%#  rendered by the root route, get '/'. %>
 <DOCTYPE! html>
 <head>
   
@@ -6,6 +7,7 @@
 <body>
   <h1>Welcome to Hogwarts</h1>
   <h4>Please sign up or log in to access your @hogwarts.edu email account</h4>
+  <%# the a herf is what connects the link to the text %>
   <a href="/registrations/signup">Sign Up</a>
   <a href="/sessions/login">Log In</a>
 
