--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,3 +1,4 @@
+<%#  is rendered by the get '/users/home' route in the controller. %>
 "Welcome, <%=@user.name%>!"
 
 <a href="/sessions/logout">Log Out</a>
